--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,10 +44,14 @@ header {
 }
 
 header h1 {
+  display: flex;
   padding: 10px;
   margin: 10px;
+  width: 100%;
   font-size: 30px;
   text-shadow: 0px 2px black;
+  align-items: center;
+  justify-content: center;
   
 }
 
