--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -30,11 +30,11 @@ body {
 }
 
 .correct {
-    background: linear-gradient(32 deg, rgba(11, 223, 36) 0%, rgba(41, 232, 111) 100%);
+    background: linear-gradient(32deg, rgba(11, 223, 36) 0%, rgb(41, 232, 111) 100%);
 }
 
 .wrong {
-    background: linear-gradient(32 deg, rgba(230, 29, 29, 1) 0%, rgba(224, 11, 11, 1) 100%);
+    background: linear-gradient(32deg, rgba(230, 29, 29, 1) 0%, rgb(224, 11, 11, 1) 100%);
 }
 
 /* Display Section */
@@ -56,7 +56,7 @@ body {
 #progressBar {
     width: 20rem;
     height: 3rem;
-    border:0.2rem solid rgb(11, 223, 36);
+    border: 0.2rem solid rgb(11,223,36);
     margin-top: 2rem;
     border-radius: 50px;
     overflow: hidden;
@@ -64,7 +64,7 @@ body {
 
 #progressBarFull {
     height: 100%;
-    background: rgb(11, 223, 36);
+    background: rgb(11,223,36);
     width: 0%;
 }
 
