--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,129 +1,129 @@
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
 
 :root {
-  --neutral: #005c99;
-  --neutral-blue: #33adff;
-  --correct: #00fd00;
-  --wrong: #ff0000;
+  background-color: rgb(29, 26, 26)
 }
 
-body {
-  padding: 0;
+* {
+  box-sizing: border-box;
   margin: 0;
-  display: flex;
-  flex-direction: column;
-  width: 100vw;
-  height: 100vh;
-  justify-content: center;
-  align-items: center;
-  background-color: var(--neutral);
-}
-
-body.correct {
-  background-color: var(--correct);
-}
-
-body.wrong {
-  background-color: var(--wrong);
-}
-
-header {
-  display: flex;
-  width: 100%;
-  padding: 25px, 0;
-  margin: 7vh 0;
-  flex-direction: column;
-  justify-content: center;
-  align-items: start;
-  color: white;
-}
-
-header h1 {
-  display: flex;
-  padding: 10px;
-  margin: 10px;
-  width: 100%;
-  font-size: 30px;
-  text-shadow: 0px 2px black;
-  align-items: center;
-  justify-content: center;
-  
-}
-
-header p {
-  display: flex;
   padding: 0;
-  width: 100%;
-  margin: 0;
-  font-size: 25px;
-  text-shadow: 0px 1px black;
-  align-items: center;
-  justify-content: center;
+  font-size: 62.5%;
+  font-family: 'Nova Square', cursive;
+}
+
+h1 {
+  font-size: 5.4rem;
+  color: #fff;
+  margin-bottom: 5rem;
+}
+
+h2 {
+  font-size: 4.2rem;
+  margin-bottom: 4rem;
 }
 
 .container {
-  width: 800px;
-  max-width: 80%;
-  background-color: white;
-  border-radius: 5px;
-  padding: 10px;
-  box-shadow: 0 0 10px 2px;
+  width: 100vw;
+  max-width: 80rem;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  padding: 2rem;
 }
 
-.btn-grid {
-  display: grid;
-  grid-template-columns: repeat(2, auto);
-  gap: 10px;
-  margin: 20px 0;
+.flex-column {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-center {
+  justify-content: center;
+  align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.hidden {
+  display: none;
 }
 
 .btn {
-  background-color: var(--neutral-blue);
-  border: 1px solid var(--neutral);
-  border-radius: 5px;
-  padding: 5px 10px;
-  color: white;
-  outline: none;
-  width: 100%;
+  font-size: 2.4rem;
+  padding: 2rem 0;
+  width: 30rem;
+  text-align: center;
+  margin-bottom: 1rem;
+  text-decoration: none;
+  color: rgb(28, 26, 26);
+  background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
+  border-radius: 4px;
 }
 
 .btn:hover {
   cursor: pointer;
-  box-shadow: 0 0.4rem 1.3rem 0 rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(8, 114, 244, 0.6);
   transition: transform 150ms;
-  transform: scale(1.01);
+  transform: scale(1.03);
 }
 
-.btn.correct {
-  background-color: var(--correct);
-  color: black;
+.btn[disabled]:hover {
+  cursor: not-allowed;
+  box-shadow: none;
+  transform: none;
 }
 
-.btn.wrong {
-  background-color: var(--wrong);
+#highscore-btn {
+  background: linear-gradient(90deg, rgb(255, 247, 9) 0%, rgb(240, 221, 6) 100%);
 }
 
-.start-btn,
-.next-btn,
-.score-btn {
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: 10px 20px;
+#highscore-btn:hover {
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(255,255,0,0.5)
 }
 
-.controls {
+/* End Section */
+
+.end-form-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
-  gap: 10px;
+  max-width: 30rem;
 }
 
-.hide {
-  display: none;
+input {
+  margin-bottom: 1rem;
+  width: 20rem;
+  padding: 1.5rem;
+  font-size: 1.8rem;
+  border: none;
+  box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
+}
+
+input::placeholder {
+  color: #aaa;
+}
+
+#username {
+  margin-bottom: 3rem;
+  width: 100%;
+  outline: none;
+}
+
+#end-text {
+  font-size: 2.4rem;
+  color: #fff;
+  text-align: center;
+}
+
+#saveScoreBtn {
+  border: none;
 }
