--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -2,13 +2,17 @@ body {
     color: #fff;
 }
 
+.container h1 {
+    font-size: 20px;
+    width: 100%;
+}
+
 .choice-container {
     display: flex;
-    margin-bottom: 0.8rem;
+    margin-bottom: 10px;
     width: 100%;
     border-radius: 4px;
     background: rgb(18, 93, 255);
-    font-size: 3rem;
     min-width: 80rem;
 }
 
@@ -20,12 +24,14 @@ body {
 }
 
 .choice-prefix {
-    padding: 2rem 2.5rem;
+    padding:20px;
     color: #fff;
 }
 
 .choice-text {
-    padding: 2rem;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
     width: 100%;
 }
 
@@ -46,7 +52,7 @@ body {
 
 .hud-prefix {
     text-align: center;
-    font-size: 2rem;
+    font-size: 20px;
 }
 
 .hud-main-text {
@@ -54,9 +60,9 @@ body {
 }
 
 #progressBar {
-    width: 20rem;
-    height: 3rem;
-    border: 0.2rem solid rgb(11,223,36);
+    width: 100%;
+    height: 20px;
+    border: 2px solid rgb(11,223,36);
     margin-top: 2rem;
     border-radius: 50px;
     overflow: hidden;
