--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nova+Square&display=swap');
-
 :root {
   background-color: rgb(29, 26, 26)
 }
@@ -8,30 +6,29 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  font-size: 62.5%;
-  font-family: 'Nova Square', cursive;
+  font-size: 12px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
-  font-size: 5.4rem;
+  font-size: 30px;
   color: #fff;
-  margin-bottom: 5rem;
+  margin-bottom: 40px;
 }
 
 h2 {
-  font-size: 4.2rem;
-  margin-bottom: 4rem;
+  font-size: 25px;
+  margin-bottom: 20px;
 }
 
 .container {
-  width: 100vw;
-  max-width: 80rem;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   margin: 0 auto;
-  padding: 2rem;
+  padding: 50px 3rem;
 }
 
 .flex-column {
@@ -52,16 +49,12 @@ h2 {
   text-align: center;
 }
 
-.hidden {
-  display: none;
-}
-
 .btn {
-  font-size: 2.4rem;
-  padding: 2rem 0;
-  width: 30rem;
+  font-size: 22px;
+  padding: 25px 0;
+  width: 100%;
   text-align: center;
-  margin-bottom: 1rem;
+  margin-bottom: 10px;
   text-decoration: none;
   color: rgb(28, 26, 26);
   background: linear-gradient(90deg, rgb(18, 92, 255) 0%, rgb(0, 102, 255) 100%);
@@ -86,7 +79,7 @@ h2 {
 }
 
 #highscore-btn:hover {
-  box-shadow: 0 0.4rem 1.4rem 0 rgba(255,255,0,0.5)
+  box-shadow: 0 0.4rem 1.4rem 0 rgba(255, 255, 0, 0.5)
 }
 
 /* End Section */
@@ -101,9 +94,9 @@ h2 {
 
 input {
   margin-bottom: 1rem;
-  width: 20rem;
-  padding: 1.5rem;
-  font-size: 1.8rem;
+  width: 100%;
+  padding: 30px 30px;
+  font-size: 16px;
   border: none;
   box-shadow: 0 0.1rem 1.4rem 0 rgba(86, 185, 235, 0.5);
 }
