--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -61,9 +61,9 @@ body {
 
 #progressBar {
     width: 100%;
-    height: 20px;
+    height: 12px;
     border: 2px solid rgb(11,223,36);
-    margin-top: 2rem;
+    margin-top: 5px;
     border-radius: 50px;
     overflow: hidden;
 }
@@ -74,8 +74,20 @@ body {
     width: 0%;
 }
 
+@media screen and (max-width: 1024px) {
+    .choice-container {
+        min-width: 60rem;
+    }
+}
+
 @media screen and (max-width: 768px) {
     .choice-container {
-        min-width: 40rem;
+        min-width: 30rem;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .choice-container {
+        min-width: 20rem;
     }
 }
