adjusted style.css width. changed comments within game.js

--- a/assets/css/game.css
+++ b/assets/css/game.css
@@ -5,6 +5,8 @@ body {
 .container h1 {
     font-size: 20px;
     width: 100%;
+    word-wrap: normal;
+    overflow-wrap: normal;
 }
 
 .choice-container {
